# arango-ontoextract

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_PLAN.md  Makefile  PRD.md  README.md  SUBAGENT_PROMPTS.md  SYSTEM_REVIEW_REPORT.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  entrypoint  main.py  package-lock.json  pyproject.toml  requirements.txt
backend/: AGENTS.md  Dockerfile  entrypoint  pyproject.toml
backend/app/: __init__.py  config.py  frontend_static.py  main.py  minimal_login.py  preflight.py  tasks.py
backend/app/api/: admin.py  alignment.py  auth.py  curation.py  dependencies.py  documents.py  er.py  errors.py  extraction.py  health.py  metrics.py  notifications.py  ontology.py  orgs.py  quality.py  rate_limit.py  ws_curation.py  ws_extraction.py
backend/app/api/ontology/: __init__.py  _shared.py  domain.py  entities_read.py  imports.py  imports_io.py  individuals.py  library.py  mutations.py  requirements.py  schema_relational.py  schema_temporal.py
backend/app/data/: __init__.py  standard_ontology_catalog.json
backend/app/data/ontologies/: __init__.py  dcterms_minimal.ttl
backend/app/db/: alignment_repo.py  client.py  constraints_repo.py  cq_gap_repo.py  curation_repo.py  documents_repo.py  individuals_repo.py  ontology_collections.py  ontology_repo.py  orgs_repo.py  pagination.py  quality_history_repo.py  registry_repo.py  releases_repo.py  requirements_repo.py  revision_meta_repo.py  schema.py  temporal_revisions_repo.py  utils.py
backend/app/extraction/: llm.py  pipeline.py  state.py
backend/app/extraction/agents/: belief_revision.py  consistency.py  domain_segmenter.py  er_agent.py  extractor.py  filter.py  strategy.py  structural_gate.py
backend/app/extraction/judges/: faithfulness.py  qualitative_eval_node.py  quality_judge_node.py  semantic_validator.py
backend/app/extraction/prompts/: __init__.py  domain_segmentation.py  tier1_standard.py  tier1_technical.py  tier1_visual_aware.py
backend/app/extraction/prompts/tier2/: tier2_standard.py
backend/app/mcp/: auth.py  server.py
backend/app/mcp/resources/: ontology.py
backend/app/mcp/tools/: alignment.py  export.py  ontology.py  pipeline.py  relational.py  temporal.py
backend/app/models/: curation.py  documents.py  ontology.py
backend/app/observability/: __init__.py  tracing.py
backend/app/services/: abox_canonicalize.py  abox_extraction.py  abox_validation.py  alignment.py  alignment_eval.py  alignment_repair.py  arangordf_bridge.py  belief_revision_metrics.py  confidence.py  confidence_decay.py  consolidation.py  cq_coverage.py  cq_formalize.py  cross_tier.py  curation.py  domain_detection.py  edge_dedup.py  edge_repair.py  embedding.py  er.py  er_topology.py  export.py  extraction.py  feedback_learning.py  ingestion.py  matching.py  notification.py  ontology.py  ontology_context.py  ontology_dependency.py  ontology_effective.py  ontology_embeddings.py  ontology_graphs.py  ontology_imports_graph.py  ontology_projections.py  ontology_rule_engine.py  owl_serializer.py  promotion.py  quality_metrics.py  quality_recall.py  (+14 more)
backend/migrations/: 005_mdi_indexes.py  008_vector_indexes.py  010_process_graph.py  018_migrate_properties.py  025_ontology_imports_graph.py  026_ttl_indexes_extended.py  027_ontology_entity_vector_index.py  028_alignment_sessions.py  029_abox_collections.py  030_ontology_requirements.py  031_cq_gap_backlog.py  runner.py
backend/tests/: conftest.py
backend/tests/e2e/: test_extraction_flow.py  test_full_workflow.py  test_mcp_e2e.py  test_tier2_flow.py
backend/tests/integration/: test_belief_revision_q_fixtures.py  test_documents_api.py  test_er_pipeline.py  test_import_export.py  test_mcp_tools.py  test_migrations.py  test_temporal_queries.py
backend/tests/unit/: test_018_migrate_properties.py  test_abox_canonicalize.py  test_abox_extraction.py  test_abox_validation.py  test_admin_api.py  test_admin_consolidation_api.py  test_alignment.py  test_alignment_api.py  test_alignment_eval.py  test_alignment_repair.py  test_arango_manual_package.py  test_arangordf_bridge.py  test_auth.py  test_belief_revision_metrics.py  test_belief_revision_node.py  test_benchmark_harness.py  test_confidence.py  test_confidence_decay.py  test_config_env_file_paths.py  test_consistency.py  test_consolidation.py  test_constraints_api.py  test_constraints_repo.py  test_cq_coverage.py  test_cq_formalize.py  test_cq_gap_repo.py  test_cross_tier.py  test_curation_api_extra.py  test_curation_service.py  test_db_client.py  test_db_utils.py  test_documents_api_extra.py  test_domain_detection.py  test_domain_segmenter.py  test_edge_confidence.py  test_edge_dedup.py  test_edge_repair.py  test_er_agent.py  test_er_api.py  test_er_pipeline.py  (+89 more)
configs/: Caddyfile
docs/: DELETION_AND_REFERENTIAL_INTEGRITY.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_ALIGNMENT_ABOX_CQ.md  api-reference.md  (+13 more)
(+236 files in other folders)
