[project]
name = "aoe-backend"
# Single source of truth: app/__init__.py:__version__ (read via [tool.hatch.version]).
dynamic = ["version"]
description = "Arango-OntoExtract — LLM-driven ontology extraction and curation platform"
# Arango manual packaging / uv: must match the Container Manager base image (e.g. py13base → Python 3.13).
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "python-arango>=8.1",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "python-multipart>=0.0.18",
    "langchain>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-openai>=0.3",
    "structlog>=24.4",
    "httpx>=0.28",
    "celery[redis]>=5.4",
    "python-docx>=1.1",
    "python-pptx>=1.0",
    "pymupdf>=1.25",
    "tiktoken>=0.9",
    "openai>=1.60",
    "redis>=5.2",
    "mcp>=1.0",
    "langgraph>=0.2",
    "rdflib>=7.0",
    "arango-entity-resolution>=0.1",
    "aiofiles>=24.1",
    "PyJWT>=2.8",
    "prometheus_client>=0.21",
    # OpenTelemetry (Stream 7 PR 2 -- E.1). Default-off via
    # ``settings.otel_enabled``; deps are still installed so an operator
    # can flip the switch (and point at an OTLP collector) without
    # redeploying. Pinned ``>=1.29`` to track the current stable line
    # (Sept 2024+) where the OTLP exporter and FastAPI instrumentation
    # share a compatible API surface.
    "opentelemetry-api>=1.29",
    "opentelemetry-sdk>=1.29",
    "opentelemetry-exporter-otlp-proto-grpc>=1.29",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "opentelemetry-instrumentation-httpx>=0.50b0",
    "opentelemetry-instrumentation-logging>=0.50b0",
]

[project.optional-dependencies]
# On-prem OCR provider (Stream 13 IMG.4). Activated by
# `settings.visual_caption_provider = "tesseract"`. Requires the
# `tesseract` host binary in addition to the Python package -- see
# AGENTS.md "System dependencies" table for install commands.
ocr = [
    "pytesseract>=0.3.10",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    # Pinned to the version baked into .pre-commit-config.yaml's
    # ruff-pre-commit rev so a fresh `pip install -e .[dev]` (used by both
    # local dev setup and CI's `Lint Backend` job) gets the same ruff that
    # the local pre-commit hook would run. Otherwise CI lint can pass on
    # one ruff version while the hook fails on another. Bump in lock-step
    # with the rev in .pre-commit-config.yaml.
    "ruff==0.15.12",
    "mypy>=1.14",
    "types-requests>=2.32",
    # Drives .pre-commit-config.yaml (Tier A pre-commit + Tier B pre-push hooks).
    # See docs/git-hygiene.md.
    "pre-commit>=4.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = ["B008"]

# Arango entrypoint: line 1 must be `entrypoint = __file__` (platform uses awk '{print $1}'); imports follow.
[tool.ruff.lint.per-file-ignores]
"entrypoint" = ["E402"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests requiring a running ArangoDB instance",
]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.hatch.version]
path = "app/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Arango Container Manager installs deps with `uv` during containerization; keep all runtime deps above.
